--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 <body ng-app="mainApp" class="center">
 	<a class="alignleft" ui-sref="new">New Form</a>
 	<a class="alignright"ui-sref="view">View Data</a>
-	<h1 align="center"><b>AirLab Query Form 2</b></h1>
+	<h1 align="center"><b>AirLab Query Form</b></h1>
 	
 	<!-- UI View -->
     <ui-view></ui-view>
